@startuml

title __FACETED's Class Diagram__\n

  namespace builder.examples.faceted {
    class builder.examples.faceted.BuilderFacetsDemo {
        {static} + main()
    }
  }
  

  namespace builder.examples.faceted {
    class builder.examples.faceted.Person {
        + annualIncome : int
        + city : String
        + companyName : String
        + position : String
        + postcode : String
        + streetAddress : String
        + toString()
    }
  }
  

  namespace builder.examples.faceted {
    class builder.examples.faceted.PersonAddressBuilder {
        + PersonAddressBuilder()
        + at()
        + in()
        + withPostcode()
    }
  }
  

  namespace builder.examples.faceted {
    class builder.examples.faceted.PersonBuilder {
        + build()
        + lives()
        + works()
    }
  }
  

  namespace builder.examples.faceted {
    class builder.examples.faceted.PersonJobBuilder {
        + PersonJobBuilder()
        + asA()
        + at()
        + earning()
    }
  }
  

  builder.examples.faceted.PersonAddressBuilder -up-|> builder.examples.faceted.PersonBuilder
  builder.examples.faceted.PersonBuilder o-- builder.examples.faceted.Person : person
  builder.examples.faceted.PersonJobBuilder -up-|> builder.examples.faceted.PersonBuilder


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
